tests/grammar/import/module/no_module_attr_fail_0/stderr.golden
error[E2G22]: TypeError
 --> ${CWD}/main.k:3:5
  |
3 | a = p.D + 1
  |     ^ attribute 'D' not found in 'module 'pkg''
  |